updated warfare to new life and will later update the children menu

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#worship">Worship & Adoration</a>
+              <a class="nav-link" href="#worship">Worship</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#mission">Mission</a>
@@ -120,7 +120,7 @@
               <a class="nav-link" href="#hymns">Hymns</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#warfare">Warfare</a>
+              <a class="nav-link" href="#newlife">New Life</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -197,15 +197,14 @@
     </section>
     <section class="section animate-section text-center" id="worship">
       <h2 class="section-title royal with-icon text-center">
-        <i class="bi bi-music-note-beamed"></i> Worship & Adoration
+        <i class="bi bi-music-note-beamed"></i> Worship
       </h2>
       <!-- Dynamic worship text will be rendered here by JS -->
       <div class="youtube-playlist-embed mb-4 playlist-animate">
         <div id="yt-worship"></div>
         <div class="youtube-playlist-label">
           <span class="youtube-playlist-label-text">
-            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship &
-            Adoration
+            <i class="bi bi-youtube" style="color: #ff0000"></i> Worship
           </span>
         </div>
       </div>
@@ -513,16 +512,16 @@
         </div>
       </div>
     </section>
-    <section class="section animate-section text-center" id="warfare">
+    <section class="section animate-section text-center" id="newlife">
       <h2 class="section-title royal with-icon text-center">
-        <i class="bi bi-cross"></i> Warfare
+        <i class="bi bi-cross"></i> New Life
       </h2>
       <div
-        id="warfare-content"
+        id="newlife-content"
         style="max-width: 700px; margin: 0 auto; text-align: left"
       ></div>
       <div
-        id="warfare-children"
+        id="newlife-children"
         style="max-width: 700px; margin: 2rem auto 0 auto; text-align: left"
       ></div>
     </section>
