updated anchor to render dynamically from json file

--- a/index.html
+++ b/index.html
@@ -266,14 +266,9 @@
         <i class="bi bi-person"></i> My Testimony
       </h2>
       
-      <!-- Anchor Scripture -->
-      <div class="text-center mb-4" style="max-width: 600px; margin: 0 auto;">
-        <p class="about-text" style="font-style: italic; font-size: 1.1rem; color: #0288d1; margin-bottom: 0.5rem;">
-          "And they departed from the presence of the council, rejoicing that they were counted worthy to suffer shame for his name. And daily in the temple, and in every house, they ceased not to teach and preach Jesus Christ."
-        </p>
-        <p class="about-text" style="font-size: 1rem; color: #0288d1; font-weight: bold;">
-          — Acts 5:41-42 KJV
-        </p>
+      <!-- Anchor Scripture - will be populated by JavaScript -->
+      <div id="anchor-scripture" class="text-center mb-4" style="max-width: 600px; margin: 0 auto;">
+        <!-- Dynamic anchor content will be rendered here -->
       </div>
       
       <div style="display: flex; flex-direction: column; align-items: center">
